fix: review general colors and gap/padding

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,5 +32,5 @@ html {
 body {
   font-family: Roboto, sans-serif;
   margin: 0;
-  background-color: #1E1E1E;
+  background-color: #272727;
 }
