--- a/app/assets/stylesheets/repository.css
+++ b/app/assets/stylesheets/repository.css
@@ -1,7 +1,7 @@
 .repository_issue_grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .icon-size {
